--- a/src/dialogbox/dialogbox.css
+++ b/src/dialogbox/dialogbox.css
@@ -109,5 +109,17 @@ label {
 	label{
 		font-size: 15px;
 	}
+}
+
+@media (max-width: 400px) {
+	label{
+		font-size: 12px;
+	}
+
+}
+@media (max-width: 200px) {
+	label{
+		font-size: 10px;
+	}
 
 }
