--- a/src/dialogbox/dialogbox.css
+++ b/src/dialogbox/dialogbox.css
@@ -68,8 +68,13 @@ label {
 }
 
 #ccEmailList{
+	display:block;
 	margin-top: 30px;
 	margin-bottom: 35px;
+}
+
+#toEmailList{
+	display:block;
 }
 
 #send_button {
