--- a/src/dialogbox/dialogbox.css
+++ b/src/dialogbox/dialogbox.css
@@ -1,3 +1,5 @@
+/* © 2021 Springboard Pro Ltd. */
+
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;600&display=swap');
 
 html, body {
